sssd (1.15.3-1) UNRELEASED; urgency=medium

  * New upstream release.
  * apparmor-profile: Add chown capability, allow to notify systemd.
  * control: Add libcurl4-gnutls-dev and uuid-dev to build depends.
  * Add libsss-certmap{0,-dev} packages.
  * Add sssd-kcm.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 22 Jun 2017 09:15:34 +0300

sssd (1.15.2-1) unstable; urgency=medium

  * New upstream release.
  * control: Demote adcli to sssd-ad suggests.
  * rules, common.install: Fix sssd_krb5_locator_plugin install path.
    (LP: #1664566)
  * control, copyright, watch: Update upstream URLs.
  * common.install: Add libsss_files and socket activation helper.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 20 Mar 2017 15:17:19 +0200

sssd (1.15.0-3) unstable; urgency=medium

  * rules, install: Remove responder service and socket files for now, the
    sockets weren't supposed to be enabled anyway and can cause issues.
    (Closes: #854048)

 -- Timo Aaltonen <tjaalton@debian.org>  Sat, 04 Feb 2017 18:34:06 +0200

sssd (1.15.0-2) unstable; urgency=medium

  * import-daemon-opts.diff, sssd.default: Drop the patch modifying sssd
    service file, and revert the daemon options for sysvinit.
    /etc/default/sssd is now only for the initscript (Closes: #852719)

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 26 Jan 2017 21:29:58 +0200

sssd (1.15.0-1) unstable; urgency=medium

  * New upstream release. (Closes: #852450) (LP: #1566508)
  * Drop upstreamed patches.
  * sssd-common.sssd.default, import-daemon-opts.diff: Change default
    daemon options to match current upstream.
  * sssd-dbus.install: Drop libsss_config, which was removed.
  * sssd-{ad,common,dbus}.install: Add systemd service and socket files
    for pac, sudo, ssh, autofs, pam, nss and ifp responders.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 25 Jan 2017 22:46:02 +0200

sssd (1.14.2-2.1) unstable; urgency=low

  * Non-maintainer upload with maintainer approval.