@@ -79,7 +79,10 @@ override_dh_install:
 		      $(CURDIR)/debian/tmp/lib/systemd/system/sssd-$$responder.socket; \
 	done
 
-	dh_install --fail-missing
+	dh_install
+
+override_dh_missing:
+	dh_missing --fail-missing
 
 override_dh_python2:
 	dh_python2 --no-guessing-versions
